<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".ErrorActivity">

    <ImageView
        android:id="@+id/img_error"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/error"
        android:contentDescription="@string/ini_banner"
        />

    <TextView
        android:id="@+id/tv_error"
        android:layout_margin="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tidak_ada_daun"
        style="@style/sub_judul"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kembali"
        />
</LinearLayout>