<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tutorial">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tback"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#8DAE77"
            android:elevation="4dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_judul_tutor"
            android:textAlignment="center"
            style="@style/hasil_penyakit"
            android:layout_marginTop="10dp"
            />
        <ImageView
            android:layout_width="200dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/gambar"
            android:background="@drawable/selected"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:contentDescription="@string/gambar"
            android:src="@drawable/ss1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/sub_title"
            android:layout_marginVertical="10dp"
            android:text="@string/tv_step1"
            />
        <ImageView
            android:layout_width="200dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:contentDescription="@string/gambar"
            android:src="@drawable/ss3" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/sub_title"
            android:text="@string/tv_step2"
            />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:contentDescription="@string/gambar"
            android:layout_marginVertical="10dp"
            android:src="@drawable/ss4" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/sub_title"
            android:contentDescription="@string/gambar"
            android:text="@string/tv_step3"
            android:layout_marginBottom="20dp"
            />

    </LinearLayout>



</ScrollView>