<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".fargment.Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green2"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ini_banner"
            android:src="@drawable/banner" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_white"
            android:elevation="10dp"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_scan"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:text="@string/text_btn_scan"
                android:textAllCaps="false"
                app:backgroundTint="@color/dark_green"
                app:cornerRadius="8dp"
                app:icon="@drawable/scan"
                app:iconGravity="textStart"
                app:iconTint="@color/white" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <TextView
                    android:id="@+id/artikelTerkait"
                    style="@style/sub_judul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artikel_terkait"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/viewall"
                    style="@style/view_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_all"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/artikel_terkait"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/artikelTerkait" />

                <TextView
                    style="@style/sub_judul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="@string/guide"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/artikel_terkait" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_tutorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardPreventCornerOverlap="true">

                <LinearLayout
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/card_penggunaan"
                    android:elevation="2dp"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/how_to"
                        android:layout_marginRight="10dp"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/poin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/content_edit" />

                        <TextView
                            style="@style/medium_gray"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/aplikasi_deteksi_kopi" />
                    </LinearLayout>


                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </LinearLayout>


</ScrollView>