<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    >

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="20dp"
       android:background="@drawable/bottom_nav"
       android:elevation="10dp"
       android:orientation="vertical">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           style="@style/sub_judul"
           android:text="@string/tv_detect_using"
           android:textAlignment="center"
           android:layout_marginBottom="10dp"
           />

       <com.google.android.material.button.MaterialButton
           android:id="@+id/btn_gallery"
           style="@style/button"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:layout_marginBottom="10dp"
           android:text="@string/text_btn_galery"
           android:textAllCaps="false"
           app:backgroundTint="@color/dark_green"
           app:cornerRadius="8dp"
           app:icon="@drawable/ic_gallery"
           app:iconGravity="textStart"
           app:iconTint="@color/white" />

       <com.google.android.material.button.MaterialButton
           android:id="@+id/btn_camera"
           style="@style/button"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:layout_marginBottom="10dp"
           android:text="@string/text_from_camera"
           android:textAllCaps="false"
           app:backgroundTint="@color/dark_green"
           app:cornerRadius="8dp"
           app:icon="@drawable/ic_camera"
           app:iconGravity="textStart"
           app:iconTint="@color/white" />


   </LinearLayout>
</androidx.cardview.widget.CardView>
